ajliske tedxsvsu  alignment fix

--- a/ajliske/TEDxSVSU/css/creative.css
+++ b/ajliske/TEDxSVSU/css/creative.css
@@ -350,7 +350,7 @@ header .header-content  p:hover {
 }
 }
 .service-box {
-  max-width: 80%;
+  max-width: 100%;
   margin: 0px auto 0;
   padding-top: 6%;
 }
@@ -361,8 +361,8 @@ header .header-content  p:hover {
 }
 .service-box img{
   width:80px;
-  margin: 0px auto 0;
-  padding-top: 6%;
+  margin: 10px auto 0;
+  padding-top: 10%;
 	
 }
 
@@ -396,11 +396,13 @@ header .header-content  p:hover {
 	display:none;
 }
 @media(min-width:600px){
-	.speaker_p{
-		display:block;
-	}
+	
 }
 @media (min-width: 992px) {
+	
+  .speaker_p{
+  display:block;
+}
 	
   .service-box {
   max-width: 100%;
@@ -414,7 +416,7 @@ header .header-content  p:hover {
 	
 }
 .service-box p {
-  margin: 8px auto 0;
+  margin: auto 0;
   margin-bottom: 20px;
   color: #b30000;
   font-weight: 900;
